<resources>
    <string name="app_name">My Application</string>
    <string name="title">Profile Info</string>
    <string name="email_hint">Email</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="age_hint">Age</string>
    <string name="username_hint">Username</string>
    <string name="empty_field_error_msg">Fill in the field</string>
    <string name="email_error_msg">Email not valid</string>
    <string name="username_error_msg">Special characters are not allowed \n Must contain at least 10 symbols</string>
    <string name="name_error_msg">Must contain only letters</string>
    <string name="age_error_msg">Enter valid age</string>
    <string name="button_add_user">Add User</string>
    <string name="button_remove_user">Remove User</string>
    <string name="button_update_user">Update User</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="user_added">User added successfully</string>
    <string name="user_not_added">User already exists</string>
    <string name="user_updated">User updated successfully</string>
    <string name="user_not_updated">You cannot update email, add a new user</string>
    <string name="user_deleted">User removed successfully</string>
    <string name="user_not_deleted">User does not exist</string>
    <string name="avatar">avatar</string>
    <string name="profile_info">Profile Info</string>
    <string name="process_status">Process status</string>
    <string name="active_users">Active Users:</string>
    <string name="removed_users">Removed Users:</string>
</resources>